# wordle-stats-bot

./: pyproject.toml
wordle/: bot.py  main.py  settings.py
wordle/cogs/: events.py
